--- a/package.json
+++ b/package.json
@@ -6,22 +6,15 @@
     "url": "git+https://github.com/rush2subbu/GKEAutoComplete.git"
   },
   "scripts": {
-    "start": "gulp watch"
+    "start": "http-server ./dist"
   },
   "dependencies": {
-    "bloodhound-js": "^1.2.1",
-    "es6-promise": "^4.0.5",
-    "fetch-ie8": "^1.4.3",
-    "numeral": "^1.4.5",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "typeahead": "^0.2.2",
-    "whatwg-fetch": "^2.0.1"
-  },
-  "devDependencies": {
     "babelify": "^6.0.2",
+    "bloodhound-js": "^1.2.1",
     "browserify": "^8.1.3",
     "del": "^1.1.1",
+    "es6-promise": "^4.0.5",
+    "fetch-ie8": "^1.4.3",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-bower": "^0.0.10",
@@ -36,8 +29,14 @@
     "gulp-useref": "^1.1.1",
     "gulp-util": "^3.0.3",
     "gulp-webserver": "^0.9.0",
+    "http-server": "^0.11.1",
+    "numeral": "^1.4.5",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "typeahead": "^0.2.2",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.3.0"
+    "watchify": "^2.3.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "engines": {
     "node": ">=0.10.0"
